--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "middle.messenger.praktikum.yandex",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run build && node ./server.js"
   },
   "devDependencies": {
+    "express": "^4.18.2",
     "sass": "^1.69.5",
     "vite": "^4.4.5"
   },
